--- a/mp-wechat/pages/tabbar/my.wxss
+++ b/mp-wechat/pages/tabbar/my.wxss
@@ -6,13 +6,51 @@ page {
   background-color: #f4f4f4;
   font-size: 24rpx;
 }
+.my-vip{
+  width:100%;
+  height:100%;
+  border-radius: 30rpx;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size:90% 100%;
+}
+
+
+.user-header {
+  display: flex;
+  padding-top: 1px;
+  width: 100%;
+  height: 260rpx;
+  align-content: center;
+  background-repeat: no-repeat;
+  background-position: center right;
+  background-size: auto 100%;
+}
+
+.user-header .user-header-cont {
+  display: flex;
+  margin: auto;
+  width: 79%;
+  align-items: center;
+}
+
+.user-header .user-header-cont .user-header-avatar {
+  display: block;
+  margin-right: 30rpx;
+  width: 120rpx;
+  height: 120rpx;
+  border-radius: 50%;
+  border: 5rpx solid #fff;
+  overflow: hidden;
+}
+
 
 .userbox {
   overflow: hidden;
   display: flex;
 	flex-direction: column;
   width: 100%;
-  height: 260rpx;
+  height: 300rpx;
   align-items: center;
   justify-content: center;
 }
@@ -22,21 +60,21 @@ page {
   width: 750rpx;
   z-index: 100;
 	align-items: center;
-  justify-content: center;
+  justify-content:flex-start;
 }
 
 .userbox .userinfo .userinfo-avatar-wrap {
   display: block;
-	width: 160rpx;
-	height: 160rpx;
+	width: 100rpx;
+	height: 100rpx;
   border: 5rpx solid #eee;
   border-radius: 50%;
   overflow: hidden;
 }
 .userbox .userinfo .userinfo-avatar {
   display: block;
-	width: 160rpx;
-	height: 160rpx;
+	width: 100rpx;
+	height: 100rpx;
 }
 
 
