--- a/mp-wechat/pages/login/login.wxml
+++ b/mp-wechat/pages/login/login.wxml
@@ -8,6 +8,7 @@
     clearable
     label="手机号"
     placeholder="手机号"
+    bind:input="onMobileInput"
   />
 
   <van-field
@@ -17,10 +18,11 @@
     placeholder="请输入密码"
     required
     border="{{ false }}"
+    bind:input="onPasswordInput"
   />
 </van-cell-group>
 <view class="my-login-wrap">
-<van-button  size="small" type="primary">登录</van-button>
+<van-button  size="small" type="primary" bind:click="loginByPassword">登录</van-button>
 <van-button style="margin-left:20rpx;" plain size="small" type="primary" bind:click="goReg">快速注册</van-button>
 </view>
 
