--- a/mp-wechat/pages/card/list.wxml
+++ b/mp-wechat/pages/card/list.wxml
@@ -1,47 +1,89 @@
-<wxs src="../../comm.wxs" module="tools" />
+<wxs src="../../comm.wxs" module="tools"/>
 <view class='container'>
-  <scroll-view bindscrolltolower="bindDownLoad" class="weui-panel weui-panel_access" scroll-y="true" style="height: {{scrollHeight}}px; width: 750rpx;" wx:if="{{cardList.length > 0}}">
+    <scroll-view bindscrolltolower="bindDownLoad" class="weui-panel weui-panel_access" scroll-y="true"
+                 style="height: {{scrollHeight}}px; width: 750rpx;" wx:if="{{cardList.length > 0}}">
 
-    <view class="my-list ">
-      <view class="my-list-item " wx:for="{{cardList}}" wx:key="cardId">
-        <image class="my-card-bg" src="/images/card-y.jpg" mode='aspectFit'></image>
-        <view class="my-card-icon-wp">
-          <my-icon custom-class="my-card-icon" name="iconxiche"></my-icon>
-          <my-icon custom-class="my-card-icon" wx:if="{{item.catagory=='2'}}" name="iconbaozhang"></my-icon>
-        </view>
+        <view class="my-list ">
+            <view class="my-list-item " wx:for="{{cardList}}" wx:key="cardId">
+                <image class="my-card-bg" src="/images/card-y.jpg" mode='aspectFit'></image>
+                <view class="my-card-icon-wp">
+                    <my-icon custom-class="my-card-icon" name="iconxiche"></my-icon>
+                    <my-icon custom-class="my-card-icon" wx:if="{{item.catagory=='2'}}" name="iconbaozhang"></my-icon>
+                </view>
 
-        <view class="my-card-name">
-          {{item.cardName}}
+                <view class="my-card-name">
+                    {{item.cardName}}
+                </view>
+                <view class="my-total">
+                    总次数: {{item.totalFrequency}}
+                </view>
+                <view class="my-right-icon-wp" bindtap="showUsedRecord" data-id="{{item.cardId}}">
+                    <my-icon custom-class="my-right-icon" name="iconwodedingdan"></my-icon>
+                </view>
+
+                <view class="my-valid-time">
+                    {{tools.formatDateYMD(item.valideTime)}}
+                    <text>到期</text>
+                </view>
+                <view class="my-rest">
+                    <text class="my-rest-1">剩余</text>
+                    <text class="my-rest-2">{{item.restFrequency}}</text>
+                    <text class="my-rest-3"> 次</text>
+                </view>
+                <navigator  hover-class="none" url="../cardcode/cardcode?barCode={{item.cardNo}}">
+                <view class="my-icon-ewm-wp">
+                    <my-icon custom-class="my-icon-ewm" name="iconerweima"></my-icon>
+                </view>
+                </navigator>
+            </view>
         </view>
-        <view class="my-total">
-          总次数: {{item.totalFrequency}}
+        <navigator class=" my-go-used"  hover-class="none" url="/pages/card/used">
+                <view class=" dis-flex">
+                    <view class="flex-box t-l">
+                        <text>已用完/已过期的卡</text>
+                    </view>
+                <view class="flex-box t-r">
+                    <my-icon  name="iconyuanfucengqianwanggoumai"></my-icon>
+                </view>
+                </view>
+        </navigator>
+
+    </scroll-view>
+
+    <van-dialog
+            use-slot
+            showConfirmButton="{{false}}"
+            show="{{ showDialog }}">
+        <view class="my-dlg-wrap">
+            <view class="my-title">消费记录:</view>
+            <view class="my-dlg-item" wx:for="{{cardRecordList}}" wx:key="id" >
+                    <view class=" dis-flex">
+                        <view class="flex-box t-l">
+                            <text>卡号：{{item.cardNo}}</text>
+                        </view>
+                        <view class="flex-box t-r ">
+                           <text class="my-record-kj">扣-{{item.usedFrequency}}次</text>
+                        </view>
+                    </view>
+                    <view class=" dis-flex">
+                        <view class="flex-box t-l">
+                            <text class="my-record-date">{{tools.formatDateYMDHMS(item.createTime)}}</text>
+                        </view>
+                        <view class="flex-box t-r">
+                            <text >余{{item.afterUsedFrequency}}次</text>
+                        </view>
+                    </view>
+            </view>
         </view>
-        <view class="my-right-icon-wp">
-          <my-icon custom-class="my-right-icon" name="iconwodedingdan"></my-icon>
+        <view class="my-btn-bar">
+            <van-button   plain hairline round type="warning" bindtap="closeUsedRecord" size="small">我知道了</van-button>
         </view>
-       
-        <view class="my-valid-time">
-          {{tools.formatDateYMD(item.valideTime)}}
-          <text>到期</text>
+    </van-dialog>
+
+    <view wx:if="{{cardList.length==0}}" class="yoshop-notcont" style="margin-top:130px;">
+        <view class="img">
+            <image mode="aspectFit" src="../../images/no_content.png"></image>
         </view>
-        <view class="my-rest">
-          <text class="my-rest-1">剩余 </text>
-          <text class="my-rest-2">{{item.restFrequency}}</text>
-          <text class="my-rest-3"> 次 </text>
-        </view>
-             <view class="my-icon-ewm-wp">
-            <my-icon custom-class="my-icon-ewm" name="iconerweima"></my-icon>
-          </view>
-      
-      </view>
+        <text class="cont">亲, 没有相关内容</text>
     </view>
-
-    <view hidden="{{!no_more}}" class="no-more f-30">亲, 没有更多了</view>
-  </scroll-view>
-  <view wx:if="{{cardList.length==0}}" class="yoshop-notcont" style="margin-top:130px;">
-    <view class="img">
-      <image mode="aspectFit" src="../../images/no_content.png"></image>
-    </view>
-    <text class="cont">亲, 没有相关内容</text>
-  </view>
 </view>
