--- a/mp-wechat/pages/buy/list.wxml
+++ b/mp-wechat/pages/buy/list.wxml
@@ -36,7 +36,7 @@
             </view>
         </view>
 
-
+        <view hidden="{{!no_more}}" class="no-more f-30">亲, 没有更多了</view>
     </scroll-view>
 
 
