--- a/mp-wechat/pages/tabbar/my.wxml
+++ b/mp-wechat/pages/tabbar/my.wxml
@@ -16,11 +16,14 @@
         </view>
 
         <view wx:else class="userinfo">
-          <wxc-avatar class="userinfo-avatar-no" mold="square" src="/images/visitor_head.jpg" bindtap="relogin"> </wxc-avatar>
-          <view class='userinfo-text'>
-            <text class="userinfo-nickname"> 欢迎您 ，👆 点我登陆 </text>
-            <view style='height:10rpx;'></view>
-          </view>
+            <navigator url="/pages/login/login" hover-class="none" class="a">
+                <wxc-avatar class="userinfo-avatar-no" mold="square" src="/images/visitor_head.jpg"
+                            bindtap="relogin"></wxc-avatar>
+                <view class='userinfo-text'>
+                    <text class="userinfo-nickname"> 欢迎您 ，👆 点我登陆</text>
+                    <view style='height:10rpx;'></view>
+                </view>
+            </navigator>
         </view>
 
     </view>
@@ -73,22 +76,22 @@
     </view>
 
     <view class="user-menu">
-    <!--
-        <view class="item">
-            <navigator url="/pages/card/list" hover-class="none" class="a">
-                <my-icon name="iconqiaquan" info="99+" size='{{iconSize}}rpx' color='{{iconColor}}'
-                         style='margin:15rpx 0 10rpx 0;'/>
-                <text class="txt">我的卡券</text>
-            </navigator>
-        </view>
-        <view class="item">
-            <navigator url="/pages/card-record/list" hover-class="none" class="a">
-                <my-icon name="iconcheliangweixiubaoyang" info="99+" size='{{iconSize}}rpx' color='{{iconColor}}'
-                         style='margin:15rpx 0 10rpx 0;'/>
-                <text class="txt">消费记录</text>
-            </navigator>
-        </view>
-        -->
+        <!--
+            <view class="item">
+                <navigator url="/pages/card/list" hover-class="none" class="a">
+                    <my-icon name="iconqiaquan" info="99+" size='{{iconSize}}rpx' color='{{iconColor}}'
+                             style='margin:15rpx 0 10rpx 0;'/>
+                    <text class="txt">我的卡券</text>
+                </navigator>
+            </view>
+            <view class="item">
+                <navigator url="/pages/card-record/list" hover-class="none" class="a">
+                    <my-icon name="iconcheliangweixiubaoyang" info="99+" size='{{iconSize}}rpx' color='{{iconColor}}'
+                             style='margin:15rpx 0 10rpx 0;'/>
+                    <text class="txt">消费记录</text>
+                </navigator>
+            </view>
+            -->
 
         <view class="item no-border-right">
             <navigator url="/pages/location/location" hover-class="none" class="a">
@@ -120,7 +123,14 @@
                 <text class="txt">关于我们</text>
             </navigator>
         </view>
-        <view class="item item-bottom" bindtap="logout">
+        <view class="item item-bottom" bindtap="modifyPassword" wx:if="userInfo">
+            <navigator url="" hover-class="none" class="a">
+                <my-icon name="icondengchu" size='{{iconSize}}rpx' color='{{iconColor}}'
+                         style='margin:15rpx 0 10rpx 0;'/>
+                <text class="txt">修改密码</text>
+            </navigator>
+        </view>
+        <view class="item item-bottom" bindtap="logout" wx:if="userInfo">
             <navigator url="" hover-class="none" class="a">
                 <my-icon name="icondengchu" size='{{iconSize}}rpx' color='{{iconColor}}'
                          style='margin:15rpx 0 10rpx 0;'/>
