--- a/mp-wechat/pages/tabbar/my.wxss
+++ b/mp-wechat/pages/tabbar/my.wxss
@@ -76,7 +76,14 @@ page {
 	width: 100rpx;
 	height: 100rpx;
 }
-
+.my-img-wrap{
+  width:750rpx;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  text-align: center;
+}
 
 
 
